--- a/www/lib/ionic/scss/custom/calendar/_shift_input.scss
+++ b/www/lib/ionic/scss/custom/calendar/_shift_input.scss
@@ -11,11 +11,8 @@
       color: black;
     }
   }
-}
 
-.bottom-block {
-  // position: absolute;
-  // bottom: 0px;
-  // width: 100%;
-  // text-align: center;
+  .input-group-names {
+    margin-bottom: 10px;
+  }
 }
