--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -168,9 +168,10 @@ a {
   float: left; }
 
 .notes-display {
-  padding: 10px 10px 0px 10px; }
+  padding: 10px;
+  border: 1px solid lightgrey; }
   .notes-display .empty-notes {
-    color: transparent; }
+    color: lightgrey; }
 
 .shift-input-buttons-holder {
   margin-top: 10px;
@@ -181,6 +182,8 @@ a {
     margin-bottom: 10px; }
     .shift-input-buttons-holder button.standard-issue {
       color: black; }
+  .shift-input-buttons-holder .input-group-names {
+    margin-bottom: 10px; }
 
 .notification-box {
   background-color: #BEEB9F;
