--- a/www/templates/calendar/index.html
+++ b/www/templates/calendar/index.html
@@ -33,7 +33,7 @@
             </div>
             <div class="dates">
               <div class="row" ng-repeat="row in month.rows">
-                <div class="col date-col" ng-repeat="date in row" ng-class="{'not-current-month': !date.isInCurrentMonth, 'swap': date.shift.swap}" ng-click="dateSelected($event)" data-date="{{date.dayNum}}-{{date.month}}-{{date.year}}" data-shift-id="{{date.shift.id}}" data-start-time="{{formatStartTime(date.shift)}}" data-notes="{{date.shift.notes}}" data-swappable="{{date.shift.shift_type.swappable}}">
+                <div class="col date-col" ng-repeat="date in row" ng-class="{'not-current-month': !date.isInCurrentMonth, 'swap': date.shift.swap}" ng-click="dateSelected($event)" data-date="{{date.dayNum}}-{{date.month}}-{{date.year}}" data-shift-id="{{date.shift.id}}" data-start-time="{{formatStartTime(date.shift)}}" data-notes="{{date.shift.group.name}}" data-swappable="{{date.shift.shift_type.swappable}}">
                   <div class="date-number">
                     {{date.dayNum}}
                   </div>
@@ -50,10 +50,10 @@
       </div>
     </div>
 
-    <!-- <div class="notes-display">
-      <div class="empty-notes" ng-show="calendar.emptyNote">|</div>
+    <div class="notes-display">
+      <div class="empty-notes" ng-show="calendar.emptyNote">Notes</div>
       <div class="actual-note" ng-show="!calendar.emptyNote"></div>
-    </div> -->
+    </div>
 
     <div class="shifts-input input-tab-contents" ng-controller="ShiftsInputCtrl" ng-show="!loader">
       <div class="shift-input-buttons-holder">
@@ -79,7 +79,7 @@
 
           <div ng-if="numKeys() > 1">
             <div ng-repeat="(groupName, shiftTypes) in shiftTypesByGroup">
-              <div>
+              <div class="input-group-names">
                 {{groupName}}
               </div>
               <span ng-repeat="shiftType in shiftTypes">
