Reword text on new and edit offers

--- a/www/templates/swaps/new-offer.html
+++ b/www/templates/swaps/new-offer.html
@@ -78,7 +78,19 @@
       </div>
       <br>
       <p>
-        You cannot offer some shifts because they're in the past, the shift pattern is not a swappable one, or {{shift_owner.first_name}} already has a shift on that day.
+        You cannot offer some shifts because:
+      </p>
+      <p>
+        1. They are in the past
+      </p>
+      <p>
+        2. Their shift patterns are not swappable
+      </p>
+      <p>
+        3. They are not in the same group
+      </p>
+      <p>
+        4. {{shift_owner.first_name}} already has a shift on that day
       </p>
     </div>
   </ion-content>
