--- a/www/templates/general/groups/provinces.html
+++ b/www/templates/general/groups/provinces.html
@@ -6,7 +6,7 @@
     <div class="list">
 
       <label class="item item-radio" ng-repeat="province in provinces" ng-click="provinceSelected(province.name, province.id)">
-        <input type="radio" name="all-countries" ng-model="provinceName" value="province.id">
+        <input type="radio" name="all-countries" value="province.id" ng-checked="provinceName == province.name">
         <div class="item-content">
           {{province.name}}
         </div>
