--- a/www/lib/ionic/scss/custom/calendar/_calendar.scss
+++ b/www/lib/ionic/scss/custom/calendar/_calendar.scss
@@ -105,6 +105,10 @@
       // color: white !important;
     }
 
+    &.holiday {
+      color: $assertive !important;
+    }
+
     .num-shifts-available-on-calendar-holder {
       a {
         text-decoration: none;
