Show holiday colour differently on calendar

--- a/www/templates/calendar/index.html
+++ b/www/templates/calendar/index.html
@@ -33,8 +33,8 @@
             </div>
             <div class="dates">
               <div class="row" ng-repeat="row in month.rows">
-                <div class="col date-col" ng-repeat="date in row" ng-class="{'not-current-month': !date.isInCurrentMonth, 'swap': date.shift.swap, 'holiday': date.holiday}" ng-click="dateSelected($event)" data-date="{{date.dayNum}}-{{date.month}}-{{date.year}}" data-shift-id="{{date.shift.id}}" data-start-time="{{formatStartTime(date.shift)}}" data-notes="{{date.shift.group.name}}" data-swappable="{{date.shift.shift_type.swappable}}" data-holiday="{{date.holiday.name}}">
-                  <div class="date-number">
+                <div class="col date-col" ng-repeat="date in row" ng-class="{'not-current-month': !date.isInCurrentMonth, 'swap': date.shift.swap}" ng-click="dateSelected($event)" data-date="{{date.dayNum}}-{{date.month}}-{{date.year}}" data-shift-id="{{date.shift.id}}" data-start-time="{{formatStartTime(date.shift)}}" data-group-name="{{date.shift.group.name}}" data-swappable="{{date.shift.shift_type.swappable}}" data-holiday="{{date.holiday.name}}">
+                  <div class="date-number" ng-class="{'holiday': date.holiday}">
                     {{date.dayNum}}<span ng-if="date.holiday">*</span>
                   </div>
                   <div class="content-text">
@@ -52,7 +52,7 @@
 
 
     <div class="shifts-input input-tab-contents" ng-controller="ShiftsInputCtrl" ng-show="!loader">
-      <div class="notes-display" ng-if="numKeys() > 1">
+      <div class="notes-display">
         <div class="empty-notes" ng-show="calendar.emptyNote">Notes</div>
         <div class="actual-note" ng-show="!calendar.emptyNote"></div>
       </div>
