--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -139,6 +139,8 @@ a {
     position: absolute;
     top: 2px;
     left: 2px; }
+    .dates .col .date-number.holiday {
+      color: red !important; }
   .dates .col .content-text {
     padding-top: 20px; }
 .dates .date-col.active {
@@ -149,8 +151,6 @@ a {
   color: #BEEB9F; }
 .dates .date-col.cannot-offer-as-swap {
   background-color: #f8f8f8; }
-.dates .date-col.holiday {
-  color: red !important; }
 .dates .date-col .num-shifts-available-on-calendar-holder a {
   text-decoration: none;
   color: black; }
