--- a/www/templates/swaps/new-offer.html
+++ b/www/templates/swaps/new-offer.html
@@ -50,7 +50,7 @@
             </div>
             <div class="dates">
               <div class="row" ng-repeat="row in month.rows">
-                <div class="col date-col" ng-repeat="date in row" ng-class="{'not-current-month': !date.isInCurrentMonth, 'swap': date.shift.swap, 'cannot-offer-as-swap': !date.canOfferAsSwap}" ng-click="multipleDatesSelected($event)" data-date="{{date.dayNum}}-{{date.month}}-{{date.year}}" data-shift-id="{{date.shift.id}}" data-notes="{{date.shift.notes}}">
+                <div class="col date-col" ng-repeat="date in row" ng-class="{'not-current-month': !date.isInCurrentMonth, 'swap': date.shift.swap, 'cannot-offer-as-swap': !date.canOfferAsSwap}" ng-click="multipleDatesSelected($event)" data-date="{{date.dayNum}}-{{date.month}}-{{date.year}}" data-shift-id="{{date.shift.id}}">
                   <div class="date-number">
                     {{date.dayNum}}
                   </div>
