Show multiple holidays if necessary

--- a/www/templates/calendar/index.html
+++ b/www/templates/calendar/index.html
@@ -33,7 +33,7 @@
             </div>
             <div class="dates">
               <div class="row" ng-repeat="row in month.rows">
-                <div class="col date-col" ng-repeat="date in row" ng-class="{'not-current-month': !date.isInCurrentMonth, 'swap': date.shift.swap}" ng-click="dateSelected($event)" data-date="{{date.dayNum}}-{{date.month}}-{{date.year}}" data-shift-id="{{date.shift.id}}" data-start-time="{{formatStartTime(date.shift)}}" data-group-name="{{date.shift.group.name}}" data-swappable="{{date.shift.shift_type.swappable}}" data-holiday="{{date.holiday.name}}">
+                <div class="col date-col" ng-repeat="date in row" ng-class="{'not-current-month': !date.isInCurrentMonth, 'swap': date.shift.swap}" ng-click="dateSelected($event)" data-date="{{date.dayNum}}-{{date.month}}-{{date.year}}" data-shift-id="{{date.shift.id}}" data-start-time="{{formatStartTime(date.shift)}}" data-group-name="{{date.shift.group.name}}" data-swappable="{{date.shift.shift_type.swappable}}" data-holiday="{{date.holiday}}">
                   <div class="date-number" ng-class="{'holiday': date.holiday}">
                     {{date.dayNum}}<span ng-if="date.holiday">*</span>
                   </div>
