Add legend to calendar index

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -25,5 +25,7 @@ $energized:                       #BEEB9F !default;
 $text-on-energized:               black !default;
 $highlight:                       #FFFF9D !default;
 
+$assertive:                       #ef473a !default;
+
 // Include all of Ionic
 @import "www/lib/ionic/scss/ionic";
