--- a/www/lib/ionic/scss/ionic.scss
+++ b/www/lib/ionic/scss/ionic.scss
@@ -18,10 +18,13 @@
 
   "custom/notifications/index",
 
+  "custom/shared/legend",
+
   "custom/swaps/comments/view",
   "custom/swaps/shared",
   "custom/swaps/own_detail",
   "custom/swaps/up_for_grabs",
+  
 
   // Third party
   "third_party/sweet_alert",
