--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -140,7 +140,7 @@ a {
     top: 2px;
     left: 2px; }
     .dates .col .date-number.holiday {
-      color: red !important; }
+      color: #ef473a !important; }
   .dates .col .content-text {
     padding-top: 20px; }
 .dates .date-col.active {
@@ -288,6 +288,32 @@ a {
   white-space: normal !important; }
 .notifications-list .item.not-read {
   background-color: #f6f7f8; }
+
+.close-legend-modal-button {
+  border: none !important; }
+
+.legend-modal {
+  padding: 15px; }
+  .legend-modal h4 {
+    margin-left: 5px; }
+  .legend-modal .legend-row {
+    margin-bottom: 10px; }
+  .legend-modal .sample-date {
+    width: 50px;
+    height: 50px;
+    border: 1px solid lightgrey;
+    padding-left: 3px;
+    position: relative; }
+    .legend-modal .sample-date .top-date {
+      position: absolute;
+      left: 3px; }
+      .legend-modal .sample-date .top-date.holiday {
+        color: #ef473a !important; }
+    .legend-modal .sample-date .date-content {
+      text-align: center;
+      padding-top: 20px;
+      margin-left: -2px;
+      font-size: 20px; }
 
 .comments-page-footer .has-tabs {
   padding: 0px !important; }
