--- a/www/templates/calendar/index.html
+++ b/www/templates/calendar/index.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Calendar" cache-view="false">
   <ion-nav-buttons side="right">
-    <a class="button button-icon icon ion-information-circled" ng-click="openLengendModal()"></a>
+    <a class="button button-icon icon ion-ios-information-outline" ng-click="openLengendModal()"></a>
   </ion-nav-buttons>
   <div class="row loader-holder">
     <ion-spinner class="actual-loader spinner-positive" icon="lines" ng-show="loader"></ion-spinner>
