--- a/www/templates/swaps/index.html
+++ b/www/templates/swaps/index.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Swaps">
   <ion-nav-buttons side="right">
-    <a class="button button-icon icon ion-information-circled" ng-click="openLengendModal()"></a>
+    <a class="button button-icon icon ion-ios-information-outline" ng-click="openLengendModal()"></a>
   </ion-nav-buttons>
   <ion-tabs class="tabs-positive tabs-icon-only tabs-top">
 
