Landing page plus link to sign up page

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -19,10 +19,13 @@ $dark:                            #444 !default;
 $ionicons-font-path: "../lib/ionic/fonts" !default;
 
 $positive:                        #97D2C4 !default;
-// $positive:                        #02B5BA !default;
+$text-on-positive:                white !default;
+
 $balanced:                        #FD7400 !default;
+
 $energized:                       #BEEB9F !default;
 $text-on-energized:               black !default;
+
 $highlight:                       #FFFF9D !default;
 
 $assertive:                       #ef473a !default;
