--- a/www/lib/ionic/scss/ionic.scss
+++ b/www/lib/ionic/scss/ionic.scss
@@ -4,6 +4,8 @@
   // Custom
   "custom/main",
 
+  "custom/initial/welcome",
+
   "custom/calendar/calendar",
   "custom/calendar/shift_index",
   "custom/calendar/shift_input",
