--- a/www/templates/initial/welcome.html
+++ b/www/templates/initial/welcome.html
@@ -1,6 +1,16 @@
-<ion-view view-title="Welcome!" cache-view="false">
+<ion-view view-title="Welcome!" class="welcome-page" cache-view="false" hide-nav-bar="true">
+  <link href='https://fonts.googleapis.com/css?family=Dancing+Script' rel='stylesheet' type='text/css'>
   <ion-content>
-    
-
+    <a class="welcome-page-content" href="#/initial/sign-up">
+      <div class="icon-holder">
+        <i class="icon ion-arrow-swap"></i>
+      </div>
+      <div style="font-family: 'Dancing Script', cursive;">
+        Swapper
+      </div>
+    </a>
+    <a class="get-started-link" href="#/initial/sign-up">
+      Tap anywhere to get started
+    </a>
   </ion-content>
 </ion-view>
