--- a/www/lib/ionic/scss/ionic.scss
+++ b/www/lib/ionic/scss/ionic.scss
@@ -5,6 +5,7 @@
   "custom/main",
 
   "custom/initial/welcome",
+  "custom/initial/sign_up",
 
   "custom/calendar/calendar",
   "custom/calendar/shift_index",
