--- a/www/templates/initial/welcome.html
+++ b/www/templates/initial/welcome.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Welcome!" class="welcome-page" cache-view="false" hide-nav-bar="true">
   <link href='https://fonts.googleapis.com/css?family=Dancing+Script' rel='stylesheet' type='text/css'>
-  <ion-content>
+  <ion-content scroll="false">
     <a class="welcome-page-content" href="#/initial/sign-up">
       <div class="icon-holder">
         <i class="icon ion-arrow-swap"></i>
