--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -3,7 +3,7 @@ Create tabs with an icon and label, using the tabs-positive style.
 Each tab's child <ion-nav-view> directive will have its own
 navigation history that also transitions its views in and out.
 -->
-<ion-tabs class="tabs-icon-top tabs-background-positive tabs-color-light" ng-class="{'tabs-item-hide': !hasToken()}">
+<ion-tabs class="tabs-icon-top tabs-background-positive tabs-color-light">
 
   <!-- Calendar Tab -->
   <ion-tab title="Calendar" icon-off="ion-ios-calendar-outline" icon-on="ion-ios-calendar" href="#/tab/calendar/index">
