--- a/www/templates/initial/sign_up.html
+++ b/www/templates/initial/sign_up.html
@@ -1,7 +1,60 @@
-<ion-view view-title="Sign up" cache-view="false">
+<ion-view view-title="Sign up" cache-view="false" class="initial-sign-up-page">
+  <ion-nav-buttons side="left">
+    <a class="button button-icon icon ion-ios-arrow-back" href="#/initial/welcom">Back</a>
+  </ion-nav-buttons>
+  <div class="row loader-holder">
+    <ion-spinner class="actual-loader spinner-positive" icon="lines" ng-show="loader"></ion-spinner>
+  </div>
   <ion-content>
-    <div class="">
-      Harro
+    <div class="list account-sign-up-list" ng-show="!loader">
+      <form name="signUp">
+        <label class="item item-input">
+          <input type="text" ng-model="firstName" placeholder="First name">
+        </label>
+        <label class="item item-input">
+          <input type="text" ng-model="lastName" placeholder="Last name">
+        </label>
+        <label class="item item-input">
+          <input type="email" ng-model="email" placeholder="Email">
+        </label>
+        <label class="item item-input">
+          <input type="password" ng-model="password" placeholder="Password">
+        </label>
+        <div class="item item-divider">
+          Please select
+        </div>
+        <label class="item item-radio">
+          <input type="radio" name="sex" ng-model="sex" value="female">
+          <div class="sign-up-radio">
+            Female
+          </div>
+          <i class="radio-icon ion-checkmark"></i>
+        </label>
+        <label class="item item-radio">
+          <input type="radio" name="sex" ng-model="sex" value="male">
+          <div class="sign-up-radio">
+            Male
+          </div>
+          <i class="radio-icon ion-checkmark"></i>
+        </label>
+      </form>
+    </div>
+    <div class="bottom-note" ng-show="!loader">
+      <div class="error-on-submit assertive" ng-show="emailTakenError">
+        Email has already been taken
+      </div>
+      <div class="error-on-submit assertive not-valid-email" ng-show="signUp.$error.email" data-error="{{emailErrorCleaner(email, signUp.$error.email)}}">
+        Not a valid email
+      </div>
+      <div class="error-on-submit assertive" ng-show="everthingFilledInError">
+        Please fill everything in
+      </div>
+      <div class="error-on-submit assertive" ng-show="sexSelectedError">
+        Please select the sex you identify as
+      </div>
+      <button class="button button-block button-positive" ng-click="createUser(email, firstName, lastName, password, sex)">
+        Create Account
+      </button>
     </div>
   </ion-content>
 </ion-view>
