Can go to custom new group page

--- a/www/templates/initial/groups.html
+++ b/www/templates/initial/groups.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Groups" cache-view="false">
   <ion-nav-buttons side="right">
-    <a class="button button-clear button-white" href="#/tab/general/groups/create">Add</a>
+    <a class="button button-clear button-white" href="#/initial/groups-new">Add</a>
   </ion-nav-buttons>
   <div class="row loader-holder">
     <ion-spinner class="actual-loader spinner-positive" icon="lines" ng-show="loader"></ion-spinner>
