--- a/www/templates/general/groups/states.html
+++ b/www/templates/general/groups/states.html
@@ -1,6 +1,6 @@
 <ion-view view-title="States" cache-view="false">
   <ion-nav-buttons side="left">
-    <a class="button button-icon icon ion-ios-arrow-back" href="#/tab/general/groups/create">Back</a>
+    <a class="button button-icon icon ion-ios-arrow-back" ng-click="goBack()">Back</a>
   </ion-nav-buttons>
   <ion-content>
     <div class="list">
