--- a/www/templates/initial/groups_detail.html
+++ b/www/templates/initial/groups_detail.html
@@ -7,38 +7,6 @@
     <ion-spinner class="actual-loader spinner-positive" icon="lines" ng-show="loader"></ion-spinner>
   </div>
   <ion-content>
-    <div class="detailed-group-header-holder">
-      <div class="title">
-        <h4>
-          {{group.name}}
-        </h4>
-        <p>
-          Located in: <span ng-if="group.province_state">{{group.province_state}}, </span>{{group.country}}
-        </p>
-      </div>
-      <div>
-        {{message}}
-      </div>
-      <button class="button button-positive" ng-click="joinGroup()" ng-show="!groupHasUser" ng-class="buttonClicked ? 'clicked' : ''">
-        <ion-spinner icon="lines" class="join-leave-loader" ng-show="buttonClicked"></ion-spinner>
-        Join Group
-      </button>
-    </div>
-
-    <div class="item item-divider">
-      Members:
-    </div>
-    <ion-list >
-      <ion-item ng-repeat="user in users" type="item-text-wrap">
-        {{user.first_name}} {{user.last_name}}
-      </ion-item>
-    </ion-list>
-
-    <div class="detailed-group-footer-holder">
-      <button class="button button-positive" ng-click="joinGroup()" ng-show="!groupHasUser" ng-class="buttonClicked ? 'clicked' : ''">
-        <ion-spinner icon="lines" class="join-leave-loader" ng-show="buttonClicked"></ion-spinner>
-        Join group
-      </button>
-    </div>
+    <group-detail></group-detail>
   </ion-content>
 </ion-view>
