--- a/www/templates/general/index.html
+++ b/www/templates/general/index.html
@@ -1,5 +1,6 @@
-<ion-view view-title="General">
+<ion-view view-title="General" cache-view="false">
   <ion-content>
+    <notification ng-model="message" ng-show="message"></notification>
     <div class="list">
 
       <a class="item item-icon-left item-icon-right" href="#/tab/general/groups/index">
@@ -14,7 +15,7 @@
         <i class="icon ion-chevron-right icon-accessory"></i>
       </a>
 
-      <a class="item item-icon-left item-icon-right" href="#/tab/general/account/new">
+      <a class="item item-icon-left item-icon-right" href="#/tab/general/account/detail">
         <i class="icon ion-person"></i>
         Account
         <i class="icon ion-chevron-right icon-accessory"></i>
