--- a/www/lib/ionic/scss/ionic.scss
+++ b/www/lib/ionic/scss/ionic.scss
@@ -12,6 +12,7 @@
   "custom/calendar/shift_input",
 
   "custom/directives/notification",
+  "custom/directives/ion_radio",
 
   "custom/general/account/new",
   "custom/general/groups/detail",
