--- a/www/templates/initial/sign_up.html
+++ b/www/templates/initial/sign_up.html
@@ -8,35 +8,23 @@
   <ion-content>
     <div class="list account-sign-up-list" ng-show="!loader">
       <form name="signUp">
-        <label class="item item-input">
+        <label class="item item-input text-input">
           <input type="text" ng-model="firstName" placeholder="First name">
         </label>
-        <label class="item item-input">
+        <label class="item item-input text-input">
           <input type="text" ng-model="lastName" placeholder="Last name">
         </label>
-        <label class="item item-input">
+        <label class="item item-input text-input">
           <input type="email" ng-model="email" placeholder="Email">
         </label>
-        <label class="item item-input">
+        <label class="item item-input text-input">
           <input type="password" ng-model="password" placeholder="Password">
         </label>
         <div class="item item-divider">
           Please select
         </div>
-        <label class="item item-radio">
-          <input type="radio" name="sex" ng-model="sex" value="female">
-          <div class="sign-up-radio">
-            Female
-          </div>
-          <i class="radio-icon ion-checkmark"></i>
-        </label>
-        <label class="item item-radio">
-          <input type="radio" name="sex" ng-model="sex" value="male">
-          <div class="sign-up-radio">
-            Male
-          </div>
-          <i class="radio-icon ion-checkmark"></i>
-        </label>
+        <ion-radio-fix name="sex" ng-model="sex" value="female">Female</ion-radio-fix>
+        <ion-radio-fix name="sex" ng-model="sex" value="male">Male</ion-radio-fix>
       </form>
     </div>
     <div class="bottom-note" ng-show="!loader">
