Prevent swiping back

--- a/www/templates/initial/sign_up.html
+++ b/www/templates/initial/sign_up.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Sign up" cache-view="false" class="initial-sign-up-page">
+<ion-view view-title="Sign up" cache-view="false" class="initial-sign-up-page" can-swipe-back="false">
   <ion-nav-buttons side="left">
     <a class="button button-icon icon ion-ios-arrow-back" href="#/initial/welcom">Back</a>
   </ion-nav-buttons>
