Fix spacing on calendar tab for multiple groups

--- a/www/templates/calendar/index.html
+++ b/www/templates/calendar/index.html
@@ -90,7 +90,7 @@
                 </button>
               </span>
             </div>
-            <div>
+            <div class="input-group-names">
               General
             </div>
             <div>
