Add details to initial joining group

--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -143,6 +143,9 @@ a {
 form .sign-up-radio {
   padding: 8px 0px; }
 
+.group-top-info {
+  padding: 15px; }
+
 .calendar-holder .row {
   padding: 0px; }
 
