--- a/www/lib/ionic/scss/ionic.scss
+++ b/www/lib/ionic/scss/ionic.scss
@@ -6,6 +6,7 @@
 
   "custom/initial/welcome",
   "custom/initial/sign_up",
+  "custom/initial/groups",
 
   "custom/calendar/calendar",
   "custom/calendar/shift_index",
