--- a/www/templates/initial/groups.html
+++ b/www/templates/initial/groups.html
@@ -6,6 +6,17 @@
     <ion-spinner class="actual-loader spinner-positive" icon="lines" ng-show="loader"></ion-spinner>
   </div>
   <ion-content>
+    <div class="group-top-info">
+      <h2>
+        Join a group
+      </h2>
+      <p>
+        Users can swap shifts within their groups. You can join multiple groups, or create a new group if you don't see one you belong to.
+      </p>
+    </div>
+    <div class="item item-divider">
+      Available Groups
+    </div>
     <group-list></group-list>
   </ion-content>
 </ion-view>
