--- a/www/templates/calendar/index.html
+++ b/www/templates/calendar/index.html
@@ -54,8 +54,7 @@
 
     <div class="shifts-input input-tab-contents" ng-controller="ShiftsInputCtrl" ng-show="!loader">
       <div class="notes-display">
-        <div class="empty-notes" ng-show="calendar.emptyNote">Notes</div>
-        <div class="actual-note" ng-show="!calendar.emptyNote"></div>
+        <div class="actual-note"></div>
       </div>
 
       <div class="shift-input-buttons-holder">
