--- a/www/templates/initial/sign_up.html
+++ b/www/templates/initial/sign_up.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Sign up" cache-view="false" class="initial-sign-up-page" can-swipe-back="false">
   <ion-nav-buttons side="left">
-    <a class="button button-icon icon ion-ios-arrow-back" href="#/initial/welcom">Back</a>
+    <a class="button button-icon icon ion-ios-arrow-back" href="#/initial/welcome">Back</a>
   </ion-nav-buttons>
   <div class="row loader-holder">
     <ion-spinner class="actual-loader spinner-positive" icon="lines" ng-show="loader"></ion-spinner>
