--- a/www/templates/notifications/directives/join_group.html
+++ b/www/templates/notifications/directives/join_group.html
@@ -1,6 +1,6 @@
 <a class="item item-icon-left item-icon-right" ng-href="#/tab/general/groups/{{details.group_id}}" ng-class="{'not-read': !notification.read}" ng-click="read($event, notification.id)">
   <i class="icon ion-ios-people notification-type-icon"></i>
   <h2>{{details.joiner_name}} joined {{details.group_name}}</h2>
-  <p am-time-ago="notification.created_at | amParse:'YYYY-MM-DDTHH:mm:ss.sssZ'"></p>
+  <bottom-content></bottom-content>
   <i class="icon ion-chevron-right icon-accessory"></i>
 </a>
