--- a/www/templates/notifications/directives/swap_approved.html
+++ b/www/templates/notifications/directives/swap_approved.html
@@ -2,6 +2,6 @@
   <i class="icon ion-arrow-swap notification-type-icon"></i>
   <h2 ng-if="details.offerer_full_name">Swap approved! Your {{details.your_shift_type}} shift on {{details.your_shift_date_time}} for {{details.offerer_name_with_possessive}} {{details.offerer_shift_type}} shift on {{details.offerer_shift_date_time}}</h2>
   <h2 ng-if="details.owner_full_name">Swap approved! Your original {{details.your_shift_type}} shift on {{details.your_shift_date_time}} for {{details.owner_name_with_possessive}} {{details.owner_shift_type}} shift on {{details.owner_shift_date_time}}</h2>
-  <p am-time-ago="notification.created_at | amParse:'YYYY-MM-DDTHH:mm:ss.sssZ'"></p>
+  <bottom-content></bottom-content>
   <i class="icon ion-chevron-right icon-accessory"></i>
 </a>
