--- a/www/templates/notifications/directives/swap_cancelled.html
+++ b/www/templates/notifications/directives/swap_cancelled.html
@@ -1,5 +1,5 @@
 <a class="item item-icon-left" ng-href="" ng-class="{'not-read': !notification.read}" ng-click="read($event, notification.id)">
   <i class="icon ion-sad-outline notification-type-icon"></i>
   <h2>{{details.owner_name}} cancelled the swap on the {{details.shift_type}} shift you had offered to take</h2>
-  <p am-time-ago="notification.created_at | amParse:'YYYY-MM-DDTHH:mm:ss.sssZ'"></p>
+  <bottom-content></bottom-content>
 </a>
