--- a/www/templates/notifications/directives/swap_offered.html
+++ b/www/templates/notifications/directives/swap_offered.html
@@ -1,6 +1,6 @@
 <a class="item item-icon-left item-icon-right" ng-href="#/tab/swaps/own/{{details.shift_id}}/detail" ng-class="{'not-read': !notification.read}" ng-click="read($event, notification.id)">
   <i class="icon ion-heart notification-type-icon"></i>
   <h2>{{details.offerer_name}} offered to take your {{details.shift_type}} shift on {{details.shift_date_time}}</h2>
-  <p am-time-ago="notification.created_at | amParse:'YYYY-MM-DDTHH:mm:ss.sssZ'"></p>
+  <bottom-content></bottom-content>
   <i class="icon ion-chevron-right icon-accessory"></i>
 </a>
