--- a/www/templates/general/index.html
+++ b/www/templates/general/index.html
@@ -11,13 +11,19 @@
 
       <a class="item item-icon-left item-icon-right" href="#/tab/general/patterns/index">
         <i class="icon ion-ios-calendar"></i>
-        Shift patterns
+        Shift Patterns
         <i class="icon ion-chevron-right icon-accessory"></i>
       </a>
 
       <a class="item item-icon-left item-icon-right" href="#/tab/general/account/detail">
         <i class="icon ion-person"></i>
         Account
+        <i class="icon ion-chevron-right icon-accessory"></i>
+      </a>
+
+      <a class="item item-icon-left item-icon-right" href="mailto:swapperteam@gmail.com" target="_blank">
+        <i class="icon ion-email"></i>
+        Contact Us
         <i class="icon ion-chevron-right icon-accessory"></i>
       </a>
 
