Add note to general index about contacting us

--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -75,6 +75,9 @@ a {
     font-size: 14px;
     margin-top: 10px; }
 
+.general-bottom-note {
+  padding: 15px; }
+
 .bottom-note {
   text-align: center;
   padding: 15px; }
