--- a/www/templates/general/index.html
+++ b/www/templates/general/index.html
@@ -29,5 +29,9 @@
 
     </div>
 
+    <div class="general-bottom-note">
+      Please feel free to contact us if you have any questions / suggestions, experience any bugs, or just want to say hi :)
+    </div>
+
   </ion-content>
 </ion-view>
